# python_project_template

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  bitbucket-pipelines.yml  pyproject.toml
poetry_template/: __main__.py
